# openapi/p4pa-pdnd-services.openapi.yaml
@@ -144,11 +144,31 @@ components:
             - PDND_SERVICES_BAD_REQUEST
             - PDND_SERVICES_GENERIC_ERROR
             - PDND_SERVICES_TOO_MANY_REQUESTS
+            - PDND_SERVICES_UNAUTHORIZED
+            - PDND_SERVICES_FORBIDDEN
+            - PDND_SERVICES_CONFLICT
         code:
           type: string
         message:
           type: string
+        fields:
+          type: array
+          items:
+            $ref: "#/components/schemas/ErrorFieldDTO"
         traceId:
+          type: string
+    ErrorFieldDTO:
+      type: object
+      required:
+        - field
+        - error
+        - message
+      properties:
+        field:
+          type: string
+        error:
+          type: string
+        message:
           type: string
     PdndServicesEnum:
       type: string
