# src/main/java/it/gov/pagopa/payhub/pdnd/exception/common/CommonExceptionHandler.java
@@ -1,0 +1,134 @@
+package it.gov.pagopa.payhub.pdnd.exception.common;
+
+import it.gov.pagopa.payhub.pdnd.dto.generated.ErrorFieldDTO;
+import it.gov.pagopa.payhub.pdnd.dto.generated.PdndServicesErrorDTO;
+import it.gov.pagopa.payhub.pdnd.exception.transcoder.ExceptionMessageTranscoded;
+import it.gov.pagopa.payhub.pdnd.exception.transcoder.ExceptionMessageTranscoderService;
+import it.gov.pagopa.payhub.pdnd.utils.Utilities;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.validation.ValidationException;
+import lombok.extern.slf4j.Slf4j;
+import org.slf4j.event.Level;
+import org.springframework.core.convert.ConversionFailedException;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.security.authorization.AuthorizationDeniedException;
+import org.springframework.web.ErrorResponse;
+import org.springframework.web.ErrorResponseException;
+import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
+
+import java.util.List;
+import java.util.Objects;
+
+@Slf4j
+public class CommonExceptionHandler {
+
+  private static final ExceptionMessageTranscoderService exceptionMessageTranscoderService = new ExceptionMessageTranscoderService();
+
+  @ExceptionHandler(ConflictException.class)
+  public ResponseEntity<PdndServicesErrorDTO> handleConflictException(ConflictException ex, HttpServletRequest request) {
+    return handleException(ex, request, HttpStatus.CONFLICT, PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_CONFLICT);
+  }
+
+  @ExceptionHandler(ForbiddenException.class)
+  public ResponseEntity<PdndServicesErrorDTO> handleForbiddenException(ForbiddenException ex, HttpServletRequest request) {
+    return handleException(ex, request, HttpStatus.FORBIDDEN, PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_FORBIDDEN);
+  }
+
+  @ExceptionHandler({ValidationException.class, HttpMessageNotReadableException.class, MethodArgumentNotValidException.class, MethodArgumentTypeMismatchException.class, ConversionFailedException.class, InvalidValueException.class})
+  public ResponseEntity<PdndServicesErrorDTO> handleViolationException(Exception ex, HttpServletRequest request) {
+    return handleException(ex, request, HttpStatus.BAD_REQUEST, PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_BAD_REQUEST);
+  }
+
+  @ExceptionHandler(NotAuthorizedException.class)
+  public ResponseEntity<PdndServicesErrorDTO> handleNotAuthorizedException(Exception ex, HttpServletRequest request) {
+    return handleException(ex, request, HttpStatus.UNAUTHORIZED, PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_UNAUTHORIZED);
+  }
+
+  @ExceptionHandler(HttpClientErrorException.TooManyRequests.class)
+  public ResponseEntity<PdndServicesErrorDTO> handleInvokedHttpClientTooManyRequestsError(Exception ex, HttpServletRequest request) {
+    return handleException(ex, request, HttpStatus.TOO_MANY_REQUESTS, PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_TOO_MANY_REQUESTS);
+  }
+
+  @ExceptionHandler({ServletException.class, ErrorResponseException.class})
+  public ResponseEntity<PdndServicesErrorDTO> handleServletException(Exception ex, HttpServletRequest request) {
+    HttpStatusCode httpStatus = HttpStatus.INTERNAL_SERVER_ERROR;
+    PdndServicesErrorDTO.CategoryEnum errorCode = PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_GENERIC_ERROR;
+    if (ex instanceof ErrorResponse errorResponse) {
+      httpStatus = errorResponse.getStatusCode();
+      if (httpStatus.isSameCodeAs(HttpStatus.NOT_FOUND)) {
+        errorCode = PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_NOT_FOUND;
+      } else if (httpStatus.is4xxClientError()) {
+        errorCode = PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_BAD_REQUEST;
+      }
+    }
+    return handleException(ex, request, httpStatus, errorCode);
+  }
+
+  @ExceptionHandler(NotFoundException.class)
+  public ResponseEntity<PdndServicesErrorDTO> handleResourceNotFoundException(NotFoundException ex, HttpServletRequest request) {
+    return handleException(ex, request, HttpStatus.NOT_FOUND, PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_NOT_FOUND);
+  }
+
+  @ExceptionHandler({RuntimeException.class})
+  public ResponseEntity<PdndServicesErrorDTO> handleRuntimeException(RuntimeException ex, HttpServletRequest request) {
+    return handleException(ex, request, HttpStatus.INTERNAL_SERVER_ERROR, PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_GENERIC_ERROR);
+  }
+
+  @ExceptionHandler({AuthorizationDeniedException.class})
+  public ResponseEntity<PdndServicesErrorDTO> handleAuthorizationDeniedException(Exception ex, HttpServletRequest request) {
+    return handleException(ex, request, HttpStatus.FORBIDDEN, PdndServicesErrorDTO.CategoryEnum.PDND_SERVICES_FORBIDDEN);
+  }
+
+  public static ResponseEntity<PdndServicesErrorDTO> handleException(Exception ex, HttpServletRequest request, HttpStatusCode httpStatus, PdndServicesErrorDTO.CategoryEnum errorEnum) {
+    logException(ex, request, httpStatus);
+
+    ExceptionMessageTranscoded code2message = buildReturnedMessage(ex);
+
+    String code = Objects.requireNonNullElse(code2message.getCode(), errorEnum.getValue());
+    String message = code2message.getMessage();
+    List<ErrorFieldDTO> fields = code2message.getFields();
+
+    return ResponseEntity
+      .status(httpStatus)
+      .contentType(MediaType.APPLICATION_JSON)
+      .body(new PdndServicesErrorDTO(errorEnum, code, message, fields, Utilities.getTraceId()));
+  }
+
+  public static void logException(Exception ex, HttpServletRequest request, HttpStatusCode httpStatus) {
+    boolean printStackTrace = httpStatus.is5xxServerError();
+    Level logLevel = printStackTrace ? Level.ERROR : Level.INFO;
+    log.makeLoggingEventBuilder(logLevel)
+      .log("A {} occurred handling request {}: HttpStatus {} - {}",
+        ex.getClass(),
+        getRequestDetails(request),
+        httpStatus.value(),
+        ex.getMessage(),
+        printStackTrace ? ex : null
+      );
+    if (!printStackTrace && log.isDebugEnabled() && ex.getCause() != null) {
+      log.debug("CausedBy: ", ex.getCause());
+    }
+  }
+
+  private static ExceptionMessageTranscoded buildReturnedMessage(Exception ex) {
+    return exceptionMessageTranscoderService.transcode(ex);
+  }
+
+  public static String getRequestDetails(HttpServletRequest request) {
+    String method = Objects.requireNonNullElse(request.getMethod(), "")
+      .replace('\n', '_')
+      .replace('\r', '_');
+    String requestUri = Objects.requireNonNullElse(request.getRequestURI(), "")
+      .replace('\n', '_')
+      .replace('\r', '_');
+    return "%s %s".formatted(method, requestUri);
+  }
+}
